--- a/templates/dashboards/admin/components/activity-feed.html
+++ b/templates/dashboards/admin/components/activity-feed.html
@@ -1,5 +1,5 @@
 <!-- Activity Feed Component -->
-<!-- Usage: {% include 'dashboards/admin/components/activity-feed.html' with activities=activity_list %} -->
+{% comment %} Usage: {% include 'dashboards/admin/components/activity-feed.html' with activities=activity_list %} {% endcomment %}
 
 <div class="card activity-feed h-100">
     <div class="card-header bg-white border-bottom">
