--- a/templates/dashboards/admin/forms/user-filter.html
+++ b/templates/dashboards/admin/forms/user-filter.html
@@ -1,3 +1,4 @@
+{% load app_extras %}
 <!-- User Filter Form Component -->
 <div class="user-filter-form">
     <form id="userFilterForm" class="search-filter-form" method="GET">
