--- a/templates/dashboards/admin/pages/products/list.html
+++ b/templates/dashboards/admin/pages/products/list.html
@@ -22,6 +22,7 @@
 {% endblock %}
 
 {% block content %}
+{% include 'dashboards/admin/components/catalog-tabs.html' with active='catalog-products' %}
 <!-- Summary Cards -->
 <div class="row mb-4">
     <div class="col-md-3">
