--- a/templates/dashboards/admin/pages/reports/generate.html
+++ b/templates/dashboards/admin/pages/reports/generate.html
@@ -30,6 +30,7 @@
 {% endblock %}
 
 {% block content %}
+{% include 'dashboards/admin/components/reports-tabs.html' with active='reports-generate' %}
 <!-- Quick Report Templates -->
 <div class="row mb-4">
     <div class="col-12">
