--- a/templates/dashboards/admin/pages/settings/general.html
+++ b/templates/dashboards/admin/pages/settings/general.html
@@ -26,6 +26,8 @@
 {% endblock %}
 
 {% block content %}
+{% include 'dashboards/admin/components/settings-tabs.html' with active='settings-general' %}
+
 <div class="row">
     <!-- Settings Navigation -->
     <div class="col-lg-3">
