--- a/templates/dashboards/admin/pages/settings/integrations.html
+++ b/templates/dashboards/admin/pages/settings/integrations.html
@@ -3,5 +3,6 @@
 {% block page_title %}Integrations Settings{% endblock %}
 {% block breadcrumb_items %}<li class="breadcrumb-item"><a href="{% url 'platform_admin:dashboard' %}">Dashboard</a></li><li class="breadcrumb-item active">Settings</li>{% endblock %}
 {% block content %}
+{% include 'dashboards/admin/components/settings-tabs.html' with active='settings-integrations' %}
 <div class="content-card"><p>Integrations settings placeholder.</p></div>
 {% endblock %}
