--- a/templates/dashboards/admin/pages/settings/notifications.html
+++ b/templates/dashboards/admin/pages/settings/notifications.html
@@ -3,5 +3,6 @@
 {% block page_title %}Notifications Settings{% endblock %}
 {% block breadcrumb_items %}<li class="breadcrumb-item"><a href="{% url 'platform_admin:dashboard' %}">Dashboard</a></li><li class="breadcrumb-item active">Settings</li>{% endblock %}
 {% block content %}
+{% include 'dashboards/admin/components/settings-tabs.html' with active='settings-notifications' %}
 <div class="content-card"><p>Notifications settings placeholder.</p></div>
 {% endblock %}
