--- a/templates/dashboards/admin/pages/system/backup.html
+++ b/templates/dashboards/admin/pages/system/backup.html
@@ -3,5 +3,6 @@
 {% block page_title %}System Backup{% endblock %}
 {% block breadcrumb_items %}<li class="breadcrumb-item"><a href="{% url 'platform_admin:dashboard' %}">Dashboard</a></li><li class="breadcrumb-item active">System</li>{% endblock %}
 {% block content %}
+{% include 'dashboards/admin/components/system-tabs.html' with active='system-backup' %}
 <div class="content-card"><p>Backup placeholder. Implement backup actions here.</p></div>
 {% endblock %}
