--- a/templates/dashboards/admin/pages/system/maintenance.html
+++ b/templates/dashboards/admin/pages/system/maintenance.html
@@ -3,5 +3,6 @@
 {% block page_title %}System Maintenance{% endblock %}
 {% block breadcrumb_items %}<li class="breadcrumb-item"><a href="{% url 'platform_admin:dashboard' %}">Dashboard</a></li><li class="breadcrumb-item active">System</li>{% endblock %}
 {% block content %}
+{% include 'dashboards/admin/components/system-tabs.html' with active='system-maintenance' %}
 <div class="content-card"><p>Maintenance placeholder. Toggle maintenance mode here.</p></div>
 {% endblock %}
